--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -16,9 +16,10 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install Flet and dependencies
+      - name: Install dependencies
         run: |
           pip install flet
+          pip install -r android_build_package/requirements.txt
 
       - name: Set up Java
         uses: actions/setup-java@v4
@@ -34,7 +35,7 @@ jobs:
 
       - name: Build APK
         run: |
-          flet build apk android_build_package --project "MediAgent" --org "com.mediagent"
+          flet build apk android_build_package --project "MediAgent" --org "com.mediagent" --no-rich-output
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
