--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build APK
         run: |
-          flet build apk android_build_package --project "MediAgent" --org "com.mediagent" --no-rich-output
+          flet build apk android_build_package --project "MediAgent" --org "com.mediagent" --no-rich-output --yes
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
