--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -30,12 +30,11 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.0'
           channel: 'stable'
 
       - name: Build APK
         run: |
-          flet build apk android_build_package --project "MediAgent" --org "com.mediagent" --no-rich-output --yes
+          yes | flet build apk android_build_package --project "MediAgent" --org "com.mediagent" --no-rich-output --yes
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
