fix: pin gradio version to resolve huggingface_hub import error

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 google-generativeai
 datasets
 pandas
-gradio
+gradio==5.16.0
 python-dotenv
 huggingface_hub
 fastapi
 uvicorn
 python-multipart
 Pillow
+aiofiles
